@@ -1,0 +1,2 @@
+Cross platform solution to open files, directories or 'URLs' with
+their associated programs.
